# InfinityClimb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/components/: keyset1.ickeyset  level1.iclevel  player1.icplayer
assets/fonts/: Arial.fnt
assets/levels/: example.lvl
assets/shaders/: crosshairs.frag  crosshairs.vert  gui.frag  gui.vert  mesh.frag  mesh.vert  rect.frag  rect.vert  skybox.frag  skybox.vert  text.frag  text.vert
include/: Core.h  IC_Config.h.in  Libs.h  Log.h  Utils.h
include/gui/: Gui_Lib.h  Gui_Shader.h  Gui_Utils.h
include/gui/components/: Component.h
include/gui/text/: Font.h  Text.h  Text_Shader.h
include/math/: Mat.h  Vec.h
include/state/: Game_State.h  Start_State.h  State.h
include/util/: Color.h  String.h  Utils.h  Vector.h
include/util/math/: Mat.h  Vec.h
include/window/: Context.h  Input.h  Keyset.h  Window.h
include/world/: Camera.h  Level.h  Physics.h  Rect.h  Shader.h
include/world/level/: Level.h  Level_Parser.h
include/world/model/: Model.h  Shader.h
include/world/model/mesh/: Mesh.h  Mesh_Shader.h
include/world/model/physics/: Collidable.h
include/world/model/skybox/: Skybox.h  Skybox_Shader.h
include/world/player/: Crosshairs.h  Player.h
include/world/rect/: Rect.h  Rect_Shader.h
include/world/skybox/: Skybox_Shader.h
src/: Libs.c  Log.c  Log_Mmt.h  Main.c  Utils.c
src/gui/: Gui_Lib.c  Gui_Shader.c  Gui_Utils.c
src/gui/components/: Component.c
src/gui/text/: Font.c  Text.c  Text_Shader.c
src/math/: Color.c  Mat.c  Vec.c
src/state/: Game_State.c  Start_State.c  State.c
src/util/: Color.c  String.c  Utils.c  Vector.c
src/util/math/: Mat.c  Vec.c
src/window/: Context.c  Input.c  Keyset.c  Window.c  Window_Mmt.h
src/world/: Camera.c  Level.c  Physics.c  Rect.c  Shader.c
src/world/level/: Level.c  Level_Mmt.h  Level_Parser.c
src/world/model/: Model.c  Shader.c
src/world/model/mesh/: Mesh.c  Mesh_Shader.c
src/world/model/physics/: Collidable.c
src/world/model/skybox/: Skybox.c  Skybox_Shader.c
src/world/player/: Crosshairs.c  Player.c
src/world/rect/: Rect.c  Rect_Shader.c
src/world/skybox/: Skybox.c  Skybox_Shader.c
